2011-09-02 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_alerts.php: fixed alerts_get_alert_agent_module_actions()
	function to avoid PHP warnings on alert compound display.

2011-09-02  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_action_alerts.php: Added group recursion
	feature, it allows to search agents in child groups.

2011-09-01 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Improved detecting mime types

	Fixes: #3389654

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* operation/incidents/incident_detail.php: fixed the entities in the name
	of file in the action to upload and delete.
	
	Fixes: #3397447

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_agents.php: added the other part of logical expression
	in the patch of strstr. 

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_users.php: added the function "users_get_first_group"
	another parameter, $all_group, to return all group or not, by default is
	true.
	
	Fixes: #3401582

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* ChangeLog: sorry I mistake the number of bug in Sourceforge tracker.

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php: fixed to show empty graph in new
	installations without data.
	
	Fixes: #3371518

2011-09-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/snmpconsole/snmp_filters.php: Added confirmation message in 
	delete action.

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/modules/manage_nc_groups.php: fixed the javascript to promt to
	confirm the delete. And fixed the link to delete that in some browsers
	crash.
	
	Fixes: #3402336

2011-09-01  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_groups.php: fixed when the group haven't a icon.
	